cmake_minimum_required(VERSION 3.12)
project(MappeIrpi)

SET(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-Wall -g -pg ${CMAKE_CXX_FLAGS} -fopenmp -lstdc++fs ")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg -g")
SET(CMAKE_EXE_LINKER_FLAGS "-Wall -g -pg ${CMAKE_EXE_LINKER_FLAGS}")
set(SOURCE_FILES main.cpp)
add_executable(MappeIrpi ${SOURCE_FILES})

FIND_PACKAGE(GDAL COMPONENTS REQUIRED)
add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=8)
add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
add_definitions(-fopenmp -pthread)
find_package(ImageMagick COMPONENTS Magick++)
include_directories(${ImageMagick_INCLUDE_DIRS})
target_link_libraries(MappeIrpi ${ImageMagick_LIBRARIES} gdal stdc++fs "/usr/lib/libMagickCore-7.Q16HDRI.so.6")