cmake_minimum_required(VERSION 3.12)
project(MappeIrpi)

SET(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS} -fopenmp -lstdc++fs ")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg -g")
SET(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS}")
set(SOURCE_FILES main.cpp Configuration.cpp Configuration.h )
add_executable(MappeIrpi ${SOURCE_FILES})

FIND_PACKAGE(GDAL COMPONENTS REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLIB REQUIRED glib-2.0)
add_definitions(-fopenmp -pthread)
find_library(GLib_LIBRARY glib-2.0 HINTS ${GLib_PKG_LIBRARY_DIRS})
pkg_check_modules(deps REQUIRED IMPORTED_TARGET gtk+-3.0)
target_include_directories(MappeIrpi PRIVATE ${GLIB_INCLUDE_DIRS})
target_link_libraries(MappeIrpi gdal stdc++fs vips-cpp PkgConfig::deps /usr/lib/libvips.so.42 pqxx pq)